removing files to be ignored by git

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Radmila\AppData\Local\Temp\testng-eclipse-272659803\testng-customsuite.xml</span>
+                    <span>C:\Users\Radmila\AppData\Local\Temp\testng-eclipse--672447046\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">6 methods,   6 passed</span>
+                    <span class="method-stats">9 methods,   9 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,32 +101,47 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.CronCheckerTest" hash-for-method="testNickNames">testNickNames</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseEnumeration">testParseEnumeration</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.CronCheckerTest" hash-for-method="testWillRun">testWillRun</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseEvery">testParseEvery</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.CronCheckerTest" hash-for-method="testWillRunIntervalWithStep">testWillRunIntervalWithStep</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseIncrement">testParseIncrement</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.CronCheckerTest" hash-for-method="testWillRunMoreIntervals">testWillRunMoreIntervals</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseIncrementInterval">testParseIncrementInterval</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.CronCheckerTest" hash-for-method="testWillRunSundays">testWillRunSundays</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseInterval">testParseInterval</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.CronCheckerTest" hash-for-method="testWillRunWeekDay">testWillRunWeekDay</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseInvalidString">testParseInvalidString</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseListOfIntervals">testParseListOfIntervals</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseMonthEnumeration">testParseMonthEnumeration</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="cz.cron.field.FieldTest" hash-for-method="testParseMonthInterval">testParseMonthInterval</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -144,49 +159,70 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">cz.cron.CronCheckerTest</span>
+              <span class="class-name">cz.cron.field.FieldTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testNickNames">
-                  </a> <!-- testNickNames -->
-                  <span class="method-name">testNickNames</span>
+                  <a name="testParseEnumeration">
+                  </a> <!-- testParseEnumeration -->
+                  <span class="method-name">testParseEnumeration</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWillRun">
-                  </a> <!-- testWillRun -->
-                  <span class="method-name">testWillRun</span>
+                  <a name="testParseEvery">
+                  </a> <!-- testParseEvery -->
+                  <span class="method-name">testParseEvery</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWillRunIntervalWithStep">
-                  </a> <!-- testWillRunIntervalWithStep -->
-                  <span class="method-name">testWillRunIntervalWithStep</span>
+                  <a name="testParseIncrement">
+                  </a> <!-- testParseIncrement -->
+                  <span class="method-name">testParseIncrement</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWillRunMoreIntervals">
-                  </a> <!-- testWillRunMoreIntervals -->
-                  <span class="method-name">testWillRunMoreIntervals</span>
+                  <a name="testParseIncrementInterval">
+                  </a> <!-- testParseIncrementInterval -->
+                  <span class="method-name">testParseIncrementInterval</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWillRunSundays">
-                  </a> <!-- testWillRunSundays -->
-                  <span class="method-name">testWillRunSundays</span>
+                  <a name="testParseInterval">
+                  </a> <!-- testParseInterval -->
+                  <span class="method-name">testParseInterval</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="testWillRunWeekDay">
-                  </a> <!-- testWillRunWeekDay -->
-                  <span class="method-name">testWillRunWeekDay</span>
+                  <a name="testParseInvalidString">
+                  </a> <!-- testParseInvalidString -->
+                  <span class="method-name">testParseInvalidString</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testParseListOfIntervals">
+                  </a> <!-- testParseListOfIntervals -->
+                  <span class="method-name">testParseListOfIntervals</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testParseMonthEnumeration">
+                  </a> <!-- testParseMonthEnumeration -->
+                  <span class="method-name">testParseMonthEnumeration</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testParseMonthInterval">
+                  </a> <!-- testParseMonthInterval -->
+                  <span class="method-name">testParseMonthInterval</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -194,7 +230,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Radmila\AppData\Local\Temp\testng-eclipse-272659803\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Radmila\AppData\Local\Temp\testng-eclipse--672447046\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -203,7 +239,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;cz.cron.CronCheckerTest&quot;/&gt;
+      &lt;class name=&quot;cz.cron.field.FieldTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -243,36 +279,48 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(6);
+data.addRows(9);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testNickNames')
-data.setCell(0, 2, 'cz.cron.CronCheckerTest')
-data.setCell(0, 3, 491);
+data.setCell(0, 1, 'testParseEnumeration')
+data.setCell(0, 2, 'cz.cron.field.FieldTest')
+data.setCell(0, 3, 39);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testWillRunMoreIntervals')
-data.setCell(1, 2, 'cz.cron.CronCheckerTest')
-data.setCell(1, 3, 46);
+data.setCell(1, 1, 'testParseMonthInterval')
+data.setCell(1, 2, 'cz.cron.field.FieldTest')
+data.setCell(1, 3, 10);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testWillRun')
-data.setCell(2, 2, 'cz.cron.CronCheckerTest')
-data.setCell(2, 3, 19);
+data.setCell(2, 1, 'testParseIncrement')
+data.setCell(2, 2, 'cz.cron.field.FieldTest')
+data.setCell(2, 3, 6);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'testWillRunSundays')
-data.setCell(3, 2, 'cz.cron.CronCheckerTest')
-data.setCell(3, 3, 11);
+data.setCell(3, 1, 'testParseMonthEnumeration')
+data.setCell(3, 2, 'cz.cron.field.FieldTest')
+data.setCell(3, 3, 6);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'testWillRunWeekDay')
-data.setCell(4, 2, 'cz.cron.CronCheckerTest')
-data.setCell(4, 3, 9);
+data.setCell(4, 1, 'testParseListOfIntervals')
+data.setCell(4, 2, 'cz.cron.field.FieldTest')
+data.setCell(4, 3, 2);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'testWillRunIntervalWithStep')
-data.setCell(5, 2, 'cz.cron.CronCheckerTest')
-data.setCell(5, 3, 5);
+data.setCell(5, 1, 'testParseEvery')
+data.setCell(5, 2, 'cz.cron.field.FieldTest')
+data.setCell(5, 3, 2);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testParseInvalidString')
+data.setCell(6, 2, 'cz.cron.field.FieldTest')
+data.setCell(6, 3, 1);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'testParseIncrementInterval')
+data.setCell(7, 2, 'cz.cron.field.FieldTest')
+data.setCell(7, 3, 1);
+data.setCell(8, 0, 8)
+data.setCell(8, 1, 'testParseInterval')
+data.setCell(8, 2, 'cz.cron.field.FieldTest')
+data.setCell(8, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 581 ms</span>
+              <span class="suite-total-time">Total running time: 68 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -298,30 +346,42 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">cz.cron.CronCheckerTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">cz.cron.field.FieldTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">testNickNames</span>
+                <span class="method-name">testParseEnumeration</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWillRun</span>
-                <span class="method-start">493 ms</span>
+                <span class="method-name">testParseEvery</span>
+                <span class="method-start">45 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWillRunIntervalWithStep</span>
-                <span class="method-start">514 ms</span>
+                <span class="method-name">testParseIncrement</span>
+                <span class="method-start">50 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWillRunMoreIntervals</span>
-                <span class="method-start">521 ms</span>
+                <span class="method-name">testParseIncrementInterval</span>
+                <span class="method-start">65 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWillRunSundays</span>
-                <span class="method-start">569 ms</span>
+                <span class="method-name">testParseInterval</span>
+                <span class="method-start">67 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">testWillRunWeekDay</span>
-                <span class="method-start">592 ms</span>
+                <span class="method-name">testParseInvalidString</span>
+                <span class="method-start">69 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testParseListOfIntervals</span>
+                <span class="method-start">85 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testParseMonthEnumeration</span>
+                <span class="method-start">100 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testParseMonthInterval</span>
+                <span class="method-start">107 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
