--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a7d2a1">  <td>15/03/17 02:12:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CronCheckerTest.testNickNames()[pri:0, instance:cz.cron.CronCheckerTest@18ef96]">testNickNames</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="a7d2a1">  <td>15/03/17 02:12:17</td>   <td>491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CronCheckerTest.testWillRun()[pri:0, instance:cz.cron.CronCheckerTest@18ef96]">testWillRun</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="a7d2a1">  <td>15/03/17 02:12:17</td>   <td>512</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CronCheckerTest.testWillRunIntervalWithStep()[pri:0, instance:cz.cron.CronCheckerTest@18ef96]">testWillRunIntervalWithStep</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="a7d2a1">  <td>15/03/17 02:12:17</td>   <td>519</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CronCheckerTest.testWillRunMoreIntervals()[pri:0, instance:cz.cron.CronCheckerTest@18ef96]">testWillRunMoreIntervals</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="a7d2a1">  <td>15/03/17 02:12:17</td>   <td>567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CronCheckerTest.testWillRunSundays()[pri:0, instance:cz.cron.CronCheckerTest@18ef96]">testWillRunSundays</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
-<tr bgcolor="a7d2a1">  <td>15/03/17 02:12:17</td>   <td>590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CronCheckerTest.testWillRunWeekDay()[pri:0, instance:cz.cron.CronCheckerTest@18ef96]">testWillRunWeekDay</td> 
-  <td>main@1908923184</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseEnumeration()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseEnumeration</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseEvery()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseEvery</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseIncrement()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseIncrement</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>64</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseIncrementInterval()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseIncrementInterval</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseInterval()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseInterval</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>68</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseInvalidString()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseInvalidString</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>84</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseListOfIntervals()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseListOfIntervals</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>99</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseMonthEnumeration()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseMonthEnumeration</td> 
+  <td>main@423031029</td>   <td></td> </tr>
+<tr bgcolor="a7d2a1">  <td>15/03/17 07:01:02</td>   <td>106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FieldTest.testParseMonthInterval()[pri:0, instance:cz.cron.field.FieldTest@58ceff1]">testParseMonthInterval</td> 
+  <td>main@423031029</td>   <td></td> </tr>
 </table>
